sw/source/uibase/uiview/viewtab.cxx
@@ -1699,6 +1699,8 @@ void SwView::StateTabWin(SfxItemSet& rSet)
         {
             m_nLeftBorderDistance = 0;
             m_nRightBorderDistance = 0;
+            SfxItemSetFixed<RES_BOX, RES_BOX,
+                            SID_ATTR_BORDER_INNER, SID_ATTR_BORDER_INNER> aCoreSet2(GetPool());
             if ( nSelType & SelectionType::Graphic ||
                     nSelType & SelectionType::Frame ||
                     nSelType & SelectionType::Ole ||
@@ -1714,15 +1716,17 @@ void SwView::StateTabWin(SfxItemSet& rSet)
                         const SwRect& rFlyPrtRect = rSh.GetAnyCurRect( CurRectType::FlyEmbeddedPrt, pPt );
                         aDistLR.SetLeft(rFlyPrtRect.Left());
                         aDistLR.SetRight(rFlyPrtRect.Left());
+                        rSet.Put(aDistLR);
                     }
                     else
                     {
                         SvxBoxInfoItem aBoxInfo( SID_ATTR_BORDER_INNER );
-                        aCoreSet.Put( aBoxInfo );
-                        rSh.GetFlyFrameAttr( aCoreSet );
-                        const SvxBoxItem& rBox = aCoreSet.Get(RES_BOX);
+                        aCoreSet2.Put(aBoxInfo);
+                        rSh.GetFlyFrameAttr(aCoreSet2);
+                        const SvxBoxItem& rBox = aCoreSet2.Get(RES_BOX);
                         aDistLR.SetLeft(rBox.GetDistance(SvxBoxItemLine::LEFT));
                         aDistLR.SetRight(rBox.GetDistance(SvxBoxItemLine::RIGHT));
+                        rSet.Put(aDistLR);
 
                         //add the paragraph border distance
                         SfxItemSetFixed<RES_BOX, RES_BOX> aCoreSet1( GetPool() );
@@ -1731,7 +1735,6 @@ void SwView::StateTabWin(SfxItemSet& rSet)
                         aDistLR.SetLeft(aDistLR.GetLeft() + rParaBox.GetDistance(SvxBoxItemLine::LEFT));
                         aDistLR.SetRight(aDistLR.GetRight() + rParaBox.GetDistance(SvxBoxItemLine::RIGHT));
                     }
-                    rSet.Put(aDistLR);
                     m_nLeftBorderDistance  = static_cast< sal_uInt16 >(aDistLR.GetLeft());
                     m_nRightBorderDistance = static_cast< sal_uInt16 >(aDistLR.GetRight());
                 }
@@ -1739,8 +1742,6 @@ void SwView::StateTabWin(SfxItemSet& rSet)
                     ( rSh.GetTableFormat() && !bFrameSelection &&
                     !(nFrameType & FrameTypeFlags::COLSECT ) ) )
                 {
-                    SfxItemSetFixed<RES_BOX, RES_BOX,
-                                    SID_ATTR_BORDER_INNER, SID_ATTR_BORDER_INNER>  aCoreSet2( GetPool() );
                     SvxBoxInfoItem aBoxInfo( SID_ATTR_BORDER_INNER );
                     aBoxInfo.SetTable(false);
                     aBoxInfo.SetDist(true);
@@ -1749,6 +1750,7 @@ void SwView::StateTabWin(SfxItemSet& rSet)
                     const SvxBoxItem& rBox = aCoreSet2.Get(RES_BOX);
                     aDistLR.SetLeft(rBox.GetDistance(SvxBoxItemLine::LEFT));
                     aDistLR.SetRight(rBox.GetDistance(SvxBoxItemLine::RIGHT));
+                    rSet.Put(aDistLR);
 
                     //add the border distance of the paragraph
                     SfxItemSetFixed<RES_BOX, RES_BOX> aCoreSet1( GetPool() );
@@ -1756,7 +1758,6 @@ void SwView::StateTabWin(SfxItemSet& rSet)
                     const SvxBoxItem& rParaBox = aCoreSet1.Get(RES_BOX);
                     aDistLR.SetLeft(aDistLR.GetLeft() + rParaBox.GetDistance(SvxBoxItemLine::LEFT));
                     aDistLR.SetRight(aDistLR.GetRight() + rParaBox.GetDistance(SvxBoxItemLine::RIGHT));
-                    rSet.Put(aDistLR);
                     m_nLeftBorderDistance  = static_cast< sal_uInt16 >(aDistLR.GetLeft());
                     m_nRightBorderDistance = static_cast< sal_uInt16 >(aDistLR.GetRight());
                 }
@@ -1789,14 +1790,13 @@ void SwView::StateTabWin(SfxItemSet& rSet)
                         aDistLR.SetLeft(pBox->GetDistance(SvxBoxItemLine::LEFT));
                         aDistLR.SetRight(pBox->GetDistance(SvxBoxItemLine::RIGHT));
                     }
+                    rSet.Put(aDistLR);
 
                     //add the border distance of the paragraph
-                    SfxItemSetFixed<RES_BOX, RES_BOX> aCoreSetTmp( GetPool() );
-                    rSh.GetCurAttr( aCoreSetTmp );
-                    const SvxBoxItem& rParaBox = aCoreSetTmp.Get(RES_BOX);
+                    rSh.GetCurAttr(aCoreSet2);
+                    const SvxBoxItem& rParaBox = aCoreSet2.Get(RES_BOX);
                     aDistLR.SetLeft(aDistLR.GetLeft() + rParaBox.GetDistance(SvxBoxItemLine::LEFT));
                     aDistLR.SetRight(aDistLR.GetRight() + rParaBox.GetDistance(SvxBoxItemLine::RIGHT));
-                    rSet.Put(aDistLR);
                     m_nLeftBorderDistance  = static_cast< sal_uInt16 >(aDistLR.GetLeft());
                     m_nRightBorderDistance = static_cast< sal_uInt16 >(aDistLR.GetRight());
                 }
